# pr_comments_fetcher

./: .gitignore  CLAUDE.md  README.md  justfile  main.py  pyproject.toml  run_tests.sh
src/make_rule/: __init__.py  bulk_review_comments_fetcher.py  github_review_comments_fetcher.py
src/tests/: conftest.py
src/tests/unit/: test_bulk_review_comments_fetcher.py  test_github_review_comments_fetcher.py  test_integration.py
