[project]
name = "make-rule"
version = "0.1.0"
description = "GitHub APIを使用してプルリクエストのレビューコメントを取得するツール"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "responses>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
github-review-fetcher = "make_rule.github_review_comments_fetcher:main"
bulk-review-fetcher = "make_rule.bulk_review_comments_fetcher:main"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=make_rule",
    "--cov-report=term-missing",
    "--cov-report=html",
]
